--- a/public/splash.html
+++ b/public/splash.html
@@ -45,7 +45,7 @@
 <body>
 
   <div class="splash" id="splash">
-    <img src="https://i.imgur.com/seuArquivo.png" alt="Envelope">
+    <img src="https://i.imgur.com/Wo93JL5.jpeg" alt="Envelope">
   </div>
 
   <script>
