--- a/public/index.html
+++ b/public/index.html
@@ -1,82 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <link rel="icon" href="https://i.imgur.com/wWL3UmJ.png" type="image/png">
-  <meta property="og:title" content="Convite de Casamento — Jhucy & Gabriel">
-  <meta property="og:description" content="Venha celebrar esse momento especial conosco.">
-  <meta property="og:image" content="https://i.imgur.com/wWL3UmJ.png">
-  <meta property="og:url" content="https://casamento-0byc.onrender.com">
-  <meta property="og:type" content="website">
   <meta charset="UTF-8">
-  <title>Casamento Jhucy & Gabriel</title>
+  <title>Splash Envelope</title>
   <style>
-    html, body {
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
       height: 100%;
-      overflow-y: auto;
+      overflow: hidden;
+      background-color: #fff;
     }
 
-    .imagem-container {
-      position: relative;
+    .splash {
+      position: fixed;
+      top: 0;
+      left: 0;
       width: 100vw;
-      height: auto;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: opacity 1s ease;
+      z-index: 9999;
+      background-color: #fff;
     }
 
-    .imagem-container img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    .botao-fantasma {
-      position: absolute;
-      width: 100px;
-      height: 100px;
-      top: 4327px;
-      right: 155px;
+    .splash img {
+      max-width: 100%;
+      max-height: 100%;
       cursor: pointer;
     }
 
-    .botao-localizacao {
-      position: absolute;
-      width: 100px;
-      height: 100px;
-      top: 4327px;
-      right: 730px;
-      cursor: pointer;
+    .fade-out {
+      opacity: 0;
+      pointer-events: none;
     }
-
-.botao-musica {
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  top: 950px;
-  left: 440px;
-  z-index: 999;
-  cursor: pointer;
-  border: none;
-  background: transparent;
-}
   </style>
 </head>
 <body>
-  <div class="imagem-container">
-    <img src="https://i.imgur.com/abNN8ag.jpeg" alt="Imagem com botões">
-    <a href="agendamento.html" class="botao-fantasma"></a>
-    <a href="https://maps.app.goo.gl/WH5Mmdni9L7raMbw8" class="botao-localizacao"></a>
-    <button id="botao-musica" class="botao-musica"></button>
+
+  <div class="splash" id="splash">
+    <img src="https://i.imgur.com/Wo93JL5.jpeg" alt="Envelope">
   </div>
 
-  <audio id="audio-musica" src="https://cdn.jsdelivr.net/gh/AuzaServices/musica-site/SaveGram.mp3"></audio>
-
   <script>
-    const botaoMusica = document.getElementById("botao-musica");
-    const audio = document.getElementById("audio-musica");
+    const splash = document.getElementById("splash");
 
-    botaoMusica.addEventListener("click", () => {
-      audio.play();
+    splash.addEventListener("click", () => {
+      splash.classList.add("fade-out");
+
+      // Aguarda a transição antes de redirecionar
+      setTimeout(() => {
+        window.location.href = "index.html";
+      }, 1000); // tempo da transição em milissegundos
     });
   </script>
+
 </body>
 </html>
