--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,12 @@
       background-color: #fff;
     }
 
-    .splash img {
-      max-width: 100%;
-      max-height: 100%;
-      cursor: pointer;
-    }
+.splash img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+}
 
     .fade-out {
       opacity: 0;
@@ -56,7 +57,7 @@
 
       // Aguarda a transição antes de redirecionar
       setTimeout(() => {
-        window.location.href = "index.html";
+        window.location.href = "splash.html";
       }, 1000); // tempo da transição em milissegundos
     });
   </script>
