--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: top; /* ← isso move o foco da imagem pra cima */
+object-position: 50% 20%;
   cursor: pointer;
 }
 
