--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,9 @@
 
 .splash img {
   width: 100%;
-  height: 100%;
+  height: auto; /* ou height: 100vh */
   object-fit: cover;
-object-position: 50% 20%;
-  cursor: pointer;
+  object-position: top;
 }
 
     .fade-out {
