--- a/public/index.html
+++ b/public/index.html
@@ -16,19 +16,25 @@
       background-color: #fff;
     }
 
-.splash {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-}
+    .splash {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: opacity 1s ease;
+      z-index: 9999;
+      background-color: #fff;
+    }
 
 .splash img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center top; /* ← foca no topo da imagem */
-  display: block;
+  cursor: pointer;
 }
 
     .fade-out {
