--- a/public/agendamento.html
+++ b/public/agendamento.html
@@ -184,15 +184,24 @@
   </div>
 
   <script>
-  const listaPresentes = [
-    "Xícaras branca", "Jogo de panelas cerâmica", "Panela de pressão",
-    "Kit de facas", "Kit de cama completo", "Kit de toalha de banho",
-    "Escorredor de louça (Inox ou preta)", "Travessas de vidro",
-    "Jogo de jantar porcelana branca", "Jogo de talher inox",
-    "Jarra de suco de vidro", "Batedeira (branca ou preta)",
-    "Jogo de copo de cristal", "Jogo de taças", "Boleira de vidro",
-    "Taças de sobremesa", "Organizador de alimentos (vidro ou acrílico)"
-  ];
+const listaPresentes = [
+  "Xícaras branca",
+  "Jogo de panelas cerâmica",
+  "Panela de pressão",
+  "Kit de cama completo",
+  "Kit de toalha de banho",
+  "Escorredor de louça (Inox ou na cor preta)",
+  "Travessas de vidro",
+  "Jogo de jantar porcelana branca",
+  "Jogo de talher inox",
+  "Jarra de suco de vidro",
+  "Batedeira na cor branca ou preta",
+  "Jogo de copo de cristal",
+  "Jogo de taças",
+  "Boleira de vidro",
+  "Taças de sobremesa",
+  "Organizador de alimentos (vidro ou acrílico)"
+];
 
   const container = document.getElementById("presentes");
   let presenteSelecionado = "";
