--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
 
     html, body {
       height: 100%;
-      overflow: hidden;
       background-color: #fff;
     }
 
@@ -30,12 +29,15 @@
       background-color: #fff;
     }
 
-.splash img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  cursor: pointer;
-}
+    .splash img {
+      width: 100%;
+      height: 100%;
+      max-width: 100vw;
+      max-height: 100vh;
+      object-fit: cover;
+      cursor: pointer;
+      display: block;
+    }
 
     .fade-out {
       opacity: 0;
@@ -46,7 +48,7 @@
 <body>
 
   <div class="splash" id="splash">
-    <img src="https://i.imgur.com/Wo93JL5.jpeg" alt="Envelope">
+    <img src="https://i.imgur.com/Wo93JL5.jpg" alt="Envelope">
   </div>
 
   <script>
