--- a/public/agendamento.html
+++ b/public/agendamento.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+  <link rel="icon" href="https://i.imgur.com/lw1nRbq.png" type="image/png">
   <meta charset="UTF-8">
   <title>Lista de Presentes</title>
   <style>
