--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 
     html, body {
       height: 100%;
+      overflow: hidden;
       background-color: #fff;
     }
 
@@ -29,15 +30,12 @@
       background-color: #fff;
     }
 
-    .splash img {
-      width: 100%;
-      height: 100%;
-      max-width: 100vw;
-      max-height: 100vh;
-      object-fit: cover;
-      cursor: pointer;
-      display: block;
-    }
+.splash img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+}
 
     .fade-out {
       opacity: 0;
@@ -48,7 +46,7 @@
 <body>
 
   <div class="splash" id="splash">
-    <img src="https://i.imgur.com/Wo93JL5.jpg" alt="Envelope">
+    <img src="https://i.imgur.com/IIcUohd.jpeg" alt="Envelope">
   </div>
 
   <script>
