--- a/public/splash.html
+++ b/public/splash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <link rel="icon" href="https://i.imgur.com/wWL3UmJ.png" type="image/png">
+  <link rel="icon" href="https://i.imgur.com/lw1nRbq.png" type="image/png">
   <meta property="og:title" content="Convite de Casamento — Jhucy & Gabriel">
   <meta property="og:description" content="Venha celebrar esse momento especial conosco.">
   <meta property="og:image" content="https://i.imgur.com/wWL3UmJ.png">
@@ -54,26 +54,37 @@
       background: transparent;
       border: none;
     }
+
+    .botao-musica {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      top: 950px;
+      left: 440px;
+      z-index: 999;
+      cursor: pointer;
+      border: none;
+      background: transparent;
+    }
   </style>
 </head>
 <body>
   <div class="imagem-container">
-    <img src="https://i.imgur.com/AJ8nR5W.jpeg" alt="Imagem com botões">
+    <img src="https://i.imgur.com/abNN8ag.jpeg" alt="Imagem com botões">
     <a href="agendamento.html" class="botao-fantasma"></a>
     <a href="https://maps.app.goo.gl/WH5Mmdni9L7raMbw8" class="botao-localizacao"></a>
     <a href="https://wa.me/5585994327576?text=Oii%20Jhucy%2C%20t%C3%B4%20passando%20pra%20confirmar%20a%20minha%20presen%C3%A7a%20nesse%20dia%20muito%20especial%2C%20Seu%20casamento." class="botao-whatsapp" target="_blank"></a>
+    <button id="botao-musica" class="botao-musica"></button>
   </div>
 
-  <audio id="audio-musica" src="https://cdn.jsdelivr.net/gh/AuzaServices/musica-site/SaveGram.mp3" autoplay muted></audio>
+  <audio id="audio-musica" src="https://cdn.jsdelivr.net/gh/AuzaServices/musica-site/SaveGram.mp3"></audio>
 
   <script>
+    const botaoMusica = document.getElementById("botao-musica");
     const audio = document.getElementById("audio-musica");
 
-    window.addEventListener("load", () => {
-      audio.muted = false;
-      audio.play().catch((e) => {
-        console.log("Autoplay bloqueado pelo navegador:", e);
-      });
+    botaoMusica.addEventListener("click", () => {
+      audio.play();
     });
   </script>
 </body>
