--- a/public/splash.html
+++ b/public/splash.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="imagem-container">
-    <img src="https://i.imgur.com/abNN8ag.jpeg" alt="Imagem com botões">
+    <img src="https://i.imgur.com/YmOUWXl.jpeg" alt="Imagem com botões">
     <a href="agendamento.html" class="botao-fantasma"></a>
     <a href="https://maps.app.goo.gl/WH5Mmdni9L7raMbw8" class="botao-localizacao"></a>
     <a href="https://wa.me/5585994327576?text=Oii%20Jhucy%2C%20t%C3%B4%20passando%20pra%20confirmar%20a%20minha%20presen%C3%A7a%20nesse%20dia%20muito%20especial%2C%20Seu%20casamento." class="botao-whatsapp" target="_blank"></a>
