--- a/public/painel.html
+++ b/public/painel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <link rel="icon" href="https://i.imgur.com/lw1nRbq.png" type="image/png">
+  <link rel="icon" href="https://i.imgur.com/EPY1TsS.png" type="image/png">
   <meta property="og:title" content="Painel de Presentes">
   <meta property="og:description" content="Acompanhe os presentes de Jhucy e Gabriel.">
   <meta property="og:image" content="https://i.imgur.com/IOAPRaX.png">
