--- a/public/painel.html
+++ b/public/painel.html
@@ -4,7 +4,7 @@
   <link rel="icon" href="https://i.imgur.com/EPY1TsS.png" type="image/png">
   <meta property="og:title" content="Painel de Presentes">
   <meta property="og:description" content="Acompanhe os presentes de Jhucy e Gabriel.">
-  <meta property="og:image" content="https://i.imgur.com/IOAPRaX.png">
+  <meta property="og:image" content="https://i.imgur.com/EPY1TsS.png">
   <meta property="og:url" content="https://casamento-0byc.onrender.com">
   <meta property="og:type" content="website">
 
