--- a/public/obrigado.html
+++ b/public/obrigado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+    <link rel="icon" href="https://i.imgur.com/EPY1TsS.png" type="image/png">
   <title>Obrigado!</title>
   <style>
     body {
