--- a/public/agendamento.html
+++ b/public/agendamento.html
@@ -209,7 +209,7 @@ const listaPresentes = [
   let presenteSelecionado = "";
 
   // Busca os presentes já escolhidos no banco
-  fetch("https://casamento-0byc.onrender.com/presentes")
+  fetch("https://casamento-gbz7.onrender.com/presentes")
     .then(async res => {
   if (!res.ok) {
     const texto = await res.text();
