--- a/public/painel.html
+++ b/public/painel.html
@@ -72,7 +72,7 @@
     }
 
     function carregarDados() {
-fetch("https://casamento-0byc.onrender.com/presentes")
+fetch("https://casamento-gbz7.onrender.com/presentes")
   .then(res => res.json())
   .then(dados => {
     if (!Array.isArray(dados)) {
