--- a/public/agendamento.html
+++ b/public/agendamento.html
@@ -256,7 +256,7 @@ const listaPresentes = [
       return;
     }
 
-    fetch("https://casamento-0byc.onrender.com/presentes", {
+    fetch("https://casamento-gbz7.onrender.com/presentes", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
