--- a/public/agendamento.html
+++ b/public/agendamento.html
@@ -190,6 +190,7 @@ const listaPresentes = [
   "Xícaras branca",
   "Jogo de panelas cerâmica",
   "Panela de pressão",
+  "Micro-ondas",
   "Kit de cama completo",
   "Kit de toalha de banho",
   "Escorredor de louça (Inox ou na cor preta)",
